<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">明明出行</string>
    <string name="login">登录</string>
    <string name="signup">没有账号？注册一个吧</string>
    <string name="register">注册</string>
    <string name="login_telnumber_hint">请输入手机号码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="male">帅哥</string>
    <string name="female">女神</string>
    <string name="logout">退出登录</string>
    <string name="modify">保存修改</string>
    <string name="register_phone">请输入手机号</string>
    <string name="register_password_1">密码</string>
    <string name="register_password_2">确认密码</string>
    <string name="register_nickname">名字</string>
    <string name="insert_address">添加新地址</string>
    <string name="animate">Animate</string>
    <string name="basic_map">基本地图</string>
    <string name="basic_description">介绍如何创建一个基本地图</string>
    <string name="osm_map">OSM地图</string>
    <string name="osm_description">介绍如何替换高德底图,显示诸如osm之类的底图</string>
    <string name="base_fragment_map">SupportMapFragment创建地图</string>
    <string name="base_fragment_description">介绍SupportMapFragment方式创建地图</string>
    <string name="camera_demo">Camera功能</string>
    <string name="camera_description">介绍在地图中操作Camera各种功能</string>
    <string name="clear_map">Clear</string>
    <string name="compass">指南针</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="demo_title">AMaps2D  Demos</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="events_demo">Events功能</string>
    <string name="events_description">介绍对地图的点击，长按，拖动地图事件功能</string>
    <string name="fill_stroke">Fill Stroke</string>
    <string name="fill_color">Fill Color</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="hybrid">Hybrid</string>
    <string name="location">正在定位中</string>

    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
    </string-array>

    <string name="layers_demo">Layers图层功能</string>
    <string name="layers_description">介绍地图分别以正常、卫星模式展示出</string>
    <string name="left_arrow">\u2190</string>
    <string name="locationsource_demo">Location小蓝点功能</string>
    <string name="locationsource_description">介绍对系统定位显示小蓝点功能</string>
    <string name="locationGPS_demo">gps定位功能</string>
    <string name="locationGPS_description">介绍如何使用gps定位</string>
    <string name="locationSensorGPS_demo">gps追随功能</string>
    <string name="locationSensorGPS_demo_description">介绍如何用gps定位图标箭头随手机转动而转动</string>
    <string name="locationNetwork_description">介绍如何使用网络定位</string>
    <string name="locationNetwork_demo">网络定位功能</string>
    <string name="marker_demo">Markers功能</string>
    <string name="marker_description">介绍在地图上添加marker和infoWindow</string>
    <string name="mapOption_demo">AMapOptions实现地图</string>
    <string name="mapOption_description">介绍用AMapOptions展示一个地图</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="move_the_camera">移动camera</string>
    <string name="my_location">My Location</string>
    <string name="mylocation_layer">我的位置图层</string>
    <string name="no_demos">No demos</string>
    <string name="normal">Normal</string>
    <string name="polygon_demo">Polygons功能</string>
    <string name="polygon_description">介绍在地图绘制多边形</string>
    <string name="polyline_demo">Polylines功能</string>
    <string name="polyline_description">介绍在地图中绘制线条</string>
    <string name="groundoverlay_demo">GroundOverlay功能</string>
    <string name="groundoverlay_description">介绍在地图中绘制GroundOverlay功能</string>
    <string name="circle_demo">Circles功能</string>
    <string name="circle_description">介绍在地图中绘制圆形</string>
    <string name="screenshot_demo">地图截屏功能</string>
    <string name="screenshot_description">介绍对地图进行截屏</string>
    <string name="properties_polyline">设置Polyline属性</string>
    <string name="properties_polygon">设置Polygon属性</string>
    <string name="properties_circle">设置Circle属性</string>
    <string name="busline_demo">Busline公交查询</string>
    <string name="busline_description">介绍如何在地图中绘制BusLine</string>
    <string name="route_demo">Route路径规划</string>
    <string name="route_description">介绍如何在地图中绘制Route</string>
    <string name="rotate">旋转手势</string>
    <string name="reset_map">Reset</string>
    <string name="right_arrow">\u2192</string>
    <string name="satellite">Satellite</string>
    <string name="scroll">滑动手势</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="tap_instructions">点击或者长按地图</string>
    <string name="terrain">Terrain</string>
    <string name="tilt">倾斜手势</string>
    <string name="traffic">Traffic</string>
    <string name="transparency">Transparency</string>
    <string name="uisettings_demo">UI Settings功能</string>
    <string name="uisettings_description">介绍地图中UI Settings功能</string>
    <string name="geocoder_demo">地理编码 功能</string>
    <string name="geocoder_description">介绍 geocoder地理编码 功能</string>
    <string name="poikeywordsearch_demo">poi关键字搜索</string>
    <string name="poikeywordsearch_description">介绍poi关键字搜索功能</string>
    <string name="poiaroundsearch_demo">poi周边搜索</string>
    <string name="poiaroundsearch_description">介绍poi周边搜索功能</string>
    <string name="offlinemap_demo">离线地图功能</string>
    <string name="offlinemap_description">介绍如何使用离线地图</string>
    <string name="search_title">搜索关键字</string>
    <string name="up_arrow">\u2191</string>
    <string name="width">Width</string>
    <string name="zoom_buttons">缩放按钮</string>
    <string name="zoom_gestures">缩放手势</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="scale">比例尺</string>
    <string name="buttonScale">获取比例尺</string>
    <string name="logo_position">logo位置</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_right">右下</string>
    <string name="map_screenshot">地图截屏</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="district_demo">行政区划查询</string>
    <string name="district_description">政区划查询功能演示</string>
    <string name="district_boundary_demo">行政区划边界查询</string>
    <string name="district_boundary_description">政区划查询功能返回边界演示</string>
    <string name="share_demo">短串分享</string>
    <string name="share_description">短串分享功能演示</string>
    <string name="cloud_demo">云图搜索</string>
    <string name="cloud_description">介绍云图搜索功能</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区/县</string>
    <string name="location_share">位置分享</string>
    <string name="route_share">路径规划分享</string>
    <string name="poi_share">POI分享</string>
    <string name="navi_share">导航分享</string>
    <string name="cloud_id_search">ID搜索</string>
    <string name="cloud_arround_search">周边搜索</string>
    <string name="cloud_polygon_search">多边形搜索</string>
    <string name="cloud_local_search">本地搜索</string>
    <string name="cloud_base_field">基本字段</string>
    <string name="cloud_id">POI ID(_id)</string>
    <string name="cloud_item_name">名称(_name)</string>
    <string name="cloud_latlon">经纬度(_location)</string>
    <string name="cloud_address">地址(_address)</string>
    <string name="cloud_item_createtime">创建时间(_createtime)</string>
    <string name="cloud_item_updatetime">更新时间(_updatetime)</string>
    <string name="cloud_item_distance">距Center距离(_distance)</string>
    <string name="cloud_item_identify">自定义字段</string>
    <string name="weather_demo">天气查询</string>
    <string name="weather_description">天气预报功能</string>
    <string name="abroad_demo">国内外地图切换</string>
    <string name="abroad_description">实现国内国外地图无缝切换</string>
    <string name="subpoi_demo">POI父子关系</string>
    <string name="subpoi_description">介绍POI的父子关系功能</string>
    <string name="weather_live">实时</string>
    <string name="weather_forecast">预报</string>
    <string name="report_time">发布时间</string>
    <string name="sydney">悉尼</string>
    <string name="beijing">北京</string>
    <string name="toDo_info">点击或者长按地图</string>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_city">CityActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_user_center">UserCenterActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_route_query">RouteQueryActivity</string>
    <string name="title_activity_route_detail">RouteDetailActivity</string>
    <string name="title_activity_route_map">RouteMapActivity</string>
    <string name="title_activity_insert_address">InsertAddressActivity</string>

</resources>