<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_phone"
        android:layout_below="@+id/login_phone"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword" />

   

    <EditText
        android:id="@+id/login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:drawablePadding="20dp"
        android:drawableLeft="@drawable/telnumber"
        android:hint="@string/login_telnumber_hint"
        android:inputType="phone"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_password"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="30dp"
        android:background="#0099FF"
        android:text="@string/login" />

    <TextView
        android:id="@+id/singup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:textColor="@color/blue"
        android:text="@string/signup" />

</RelativeLayout>