<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

	<RelativeLayout
	    android:id="@+id/register_layout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:background="#FFFFFF" >

		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_centerVertical="true"
		    android:layout_alignParentTop="true"
			android:paddingTop="10dp"
		    android:src="@drawable/register_telnumber" />

		<EditText
		    android:id="@+id/register_phone"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_alignBottom="@+id/imageView1"
		    android:layout_marginLeft="24dp"
		    android:layout_toRightOf="@+id/imageView1"
		    android:inputType="phone"
		    android:hint="@string/register_phone"
		    android:ems="8" >

		    <requestFocus />
		</EditText>
		<ImageView
		    android:id="@+id/imageView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/imageView1"
		    android:layout_marginTop="36dp"
		    android:src="@drawable/register_password_1" />

	    <EditText
	        android:id="@+id/register_password_1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/register_phone"
	        android:layout_alignBottom="@+id/imageView2"
	        android:inputType="textPassword"
	        android:hint="@string/register_password_1"
	        android:ems="8" />
	    <ImageView
		    android:id="@+id/imageView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/imageView2"
		    android:layout_marginTop="36dp"
		    android:src="@drawable/register_password_2" />
	    <EditText
	        android:id="@+id/register_password_2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/register_phone"
	        android:layout_alignBottom="@+id/imageView3"
	        android:inputType="textPassword"
	        android:hint="@string/register_password_2"
	        android:ems="8" />
		<ImageView
		    android:id="@+id/imageView4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/imageView3"
		    android:layout_marginTop="36dp"
		    android:src="@drawable/nick_name" />
		 <EditText
	        android:id="@+id/register_nickname"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/register_phone"
	        android:layout_alignBottom="@+id/imageView4"
	        android:hint="@string/register_nickname"
	        android:ems="8" />
		 <ImageView
		    android:id="@+id/imageView5"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/imageView4"
		    android:layout_marginTop="36dp"
		    android:src="@drawable/gender" />
		
		 <RadioGroup 
		    android:id="@+id/register_gender"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_alignLeft="@+id/register_phone"
		    android:layout_alignBottom="@+id/imageView5"
		     >
		     <RadioButton 
		         android:id="@+id/male"
		         android:layout_width="wrap_content"
		    	 android:layout_height="wrap_content"
		    	 android:checked="true"
		    	 android:text="@string/male"/>
		     <RadioButton 
		         android:id="@+id/female"
		         android:layout_width="wrap_content"
		    	 android:layout_height="wrap_content"
		    	 android:text="@string/female"/>
		 </RadioGroup>
	</RelativeLayout>
   
	<Button android:id="@+id/signup_btn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/register_layout"
	    
	    android:layout_marginTop="36dp"
	    android:text="@string/register"
	    android:background="#0099FF"/>

 "
</RelativeLayout>